--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
         <h1> Sowmya Medabalimi</h1>
     </body>
     <h2> Flagstaff</h2>
-    <p>I like Flagstaff city for its <b>beauty</b>and the <b>peaceful nature.One more point for being fond of this city is for the view of mountains around.</b> </p>
+    <p>I like Flagstaff city for its <b>beauty</b>and the <b>peaceful nature</b>.One more point for being fond of this city is for the <b>view of mountains</b></p> around.</p>
 </html>
