added places in flagstaff

--- a/index.html
+++ b/index.html
@@ -8,4 +8,11 @@
     </body>
     <h2> Flagstaff</h2>
     <p>I like Flagstaff city for its <b>beauty</b>and the <b>peaceful nature</b>.One more point for being fond of this city is for the <b>view of mountains</b> around.</p>
+    <hr>
+    <h3>Places to visit in flagstaff</h3>
+    <ol>
+        <li> Grand Canyon</li>
+        <li> Lowell Obervatory</li>
+        <li> Lake mary</li>
+    </ol>
 </html>
