added myDish fiel

--- a/index.html
+++ b/index.html
@@ -15,4 +15,15 @@
         <li> Lowell Obervatory</li>
         <li> Lake mary</li>
     </ol>
+    <h3> Nearby places to be visited</h3>
+    <ul>
+        <li>Desert Botanical garden</li>
+        <li>Heard Museum</li>
+        <li>papago park</li>
+            <ul>
+                <li>For its view of mountains</li>
+                <li>You can find red rocks</li>
+            </ul>
+    </ul>
+    <a href="myDish.html">view more about my favorite dish</a>
 </html>
