--- a/myDish.html
+++ b/myDish.html
@@ -6,7 +6,7 @@
     <body> 
         <h1>Sowmya Medabalimi</h1>
         <p>My favorite dish is dal with mango pickle, why I like this dish is for its good taste.</p>
-        <img src="C:\Users\s575774\Desktop\webapps-repos\44563-webapps-f24-assignment3-final-medabalimisowmya\Images\my pic.jpg">
-        <img src="C:\Users\s575774\Desktop\webapps-repos\44563-webapps-f24-assignment3-final-medabalimisowmya\Images\Dal.jpg">
+        <img src="\Images\my pic.jpg">
+        <img src="\Images\Dal.jpg">
     </body>
 </html>
