--- a/index.html
+++ b/index.html
@@ -25,5 +25,36 @@
                 <li>You can find red rocks</li>
             </ul>
     </ul>
+    <hr>
+    <h3> Recommended Restuarants in USA</h3>
+    <p>The below table describes you about the restuarants you can find in USa more often</p>
+    <table>
+        <tr>
+            <th> Restaurant Name</th>
+            <th>Reason to Recomment</th>
+            <th>Location</th>
+        </tr>
+        <tr>
+            <td>Macdonalds</td>
+            <td>for its style of allowing customers ordereing food</td>
+            <td>Nation Wide</td>
+        </tr>
+        <tr>
+            <td>Subway</td>
+            <td>for the various types of sandwiches</td>
+            <td>Nation wide</td>
+        </tr>
+        <tr>
+        <td>Starbucks</td>
+        <td>Collectio of coffee</td>
+        <td>Nation wide</td>
+        </tr>
+        <tr>
+            <td>Taco bell</td>
+            <td>For mexican food and late-night hours</td>
+            <td>Nation wide</td>
+        </tr>
+
+    </table>
     <a href="myDish.html">view more about my favorite dish</a>
 </html>
