added code snippet

--- a/index.html
+++ b/index.html
@@ -56,5 +56,14 @@
         </tr>
 
     </table>
+    <hr>
+    <h3>Code Snippet representation</h3>
+    <p>Below is a dart code snippet in which convert module from dark is imported and jsondecoder is converted to yourjson</p>
+    <pre>
+        import 'dart:convert';
+
+        JsonDecoder().convert(yourJson)
+    </pre>
+    <a href="https://code.pieces.app/collections/dart">Link for the snippet</a>
     <a href="myDish.html">view more about my favorite dish</a>
 </html>
