modified index file again

--- a/index.html
+++ b/index.html
@@ -56,6 +56,16 @@
         </tr>
 
     </table>
+    <hr>
+    <h3>Code snippet representation</h3>
+    <p>The below code is a dart code snipprt in which a dart convert module was imorted and jsonDecoder is converted to yourJson</p>
+    <pre>
+        import 'dart:convert';
+
+        JsonDecoder().convert(yourJson)
+
+    </pre>
+    <a href="https://code.pieces.app/collections/dart">Link where I found this dart code snippet</a>
     
     <a href="myDish.html">view more about my favorite dish</a>
 </html>
