--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title> Basic <HTML:xml></HTML:xml></title>
     </head>
     <body>
+        <a href="bonus.html">BONUS</a>
         <h1> Sowmya Medabalimi</h1>
     </body>
     <h2> Flagstaff</h2>
