--- a/myDish.html
+++ b/myDish.html
@@ -6,7 +6,7 @@
     <body> 
         <h1>Sowmya Medabalimi</h1>
         <p>My favorite dish is dal with mango pickle, why I like this dish is for its good taste.</p>
-        <img src="\Images\my pic.jpg">
-        <img src="\Images\Dal.jpeg">
+        <img src=".\Images\my pic.jpg">
+        <img src=".\Images\Dal.jpeg">
     </body>
 </html>
