--- a/bonus.html
+++ b/bonus.html
@@ -11,7 +11,7 @@
             <li>power of parting the Red Sea with the help of God</li>
             <li>prayed and brought down Manna</li>
         </ol>
-        <img src=".\Images\moses.jpeg" alt="Moses" width="300" height="100">
+        <img src="Images\moses.jpeg" alt="Moses" width="300" height="100">
         <br>
         <a href="index.html">Back to index page</a>
     </body>
